Bug #1569.  Heading wrapping badly

--- a/web-app/css/AODN.css
+++ b/web-app/css/AODN.css
@@ -34,6 +34,8 @@ h1,h2,h3 {
 h1 {	
     font-size: 24px;
     font-weight: bold;
+    line-height:125%;
+    text-align: center;
 }
 
 h2 {
